// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard > snapshot > matches loaded snapshot 1`] = `
<DocumentFragment>
  <div
    class="dashboard"
  >
    <header
      class="dashboard__header"
    >
      <div>
        <h1
          class="dashboard__title"
        >
          Salary Manager
        </h1>
        <p
          class="dashboard__subtitle"
        >
          Employee Overview
        </p>
      </div>
      <button
        class="btn btn--primary"
      >
        + Add Employee
      </button>
    </header>
    <div
      class="dashboard__stats"
    >
      <div
        class="stat-card"
      >
        <span
          class="stat-card__value"
        >
          8
        </span>
        <span
          class="stat-card__label"
        >
          Total Employees
        </span>
      </div>
    </div>
    <div
      class="dashboard__section-header"
    >
      <p
        class="dashboard__section-title"
      >
        Employees
      </p>
      <span
        class="dashboard__section-count"
      >
        8
      </span>
    </div>
    <div
      class="dashboard__grid"
    >
      <div
        class="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Alice Johnson"
          class="employee-card__edit-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="employee-card__header"
        >
          <div
            class="employee-card__avatar"
          >
            AJ
          </div>
          <div
            class="employee-card__header-info"
          >
            <h3
              class="employee-card__name"
            >
              Alice Johnson
            </h3>
            <p
              class="employee-card__title"
            >
              Software Engineer
            </p>
          </div>
          <div
            class="employee-card__footer"
          >
            <span
              class="badge badge--full-time"
            >
              full-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Bob Smith"
          class="employee-card__edit-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="employee-card__header"
        >
          <div
            class="employee-card__avatar"
          >
            BS
          </div>
          <div
            class="employee-card__header-info"
          >
            <h3
              class="employee-card__name"
            >
              Bob Smith
            </h3>
            <p
              class="employee-card__title"
            >
              Product Manager
            </p>
          </div>
          <div
            class="employee-card__footer"
          >
            <span
              class="badge badge--full-time"
            >
              full-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Clara Nguyen"
          class="employee-card__edit-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="employee-card__header"
        >
          <div
            class="employee-card__avatar"
          >
            CN
          </div>
          <div
            class="employee-card__header-info"
          >
            <h3
              class="employee-card__name"
            >
              Clara Nguyen
            </h3>
            <p
              class="employee-card__title"
            >
              UX Designer
            </p>
          </div>
          <div
            class="employee-card__footer"
          >
            <span
              class="badge badge--full-time"
            >
              full-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit David Müller"
          class="employee-card__edit-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="employee-card__header"
        >
          <div
            class="employee-card__avatar"
          >
            DM
          </div>
          <div
            class="employee-card__header-info"
          >
            <h3
              class="employee-card__name"
            >
              David Müller
            </h3>
            <p
              class="employee-card__title"
            >
              Backend Developer
            </p>
          </div>
          <div
            class="employee-card__footer"
          >
            <span
              class="badge badge--contract"
            >
              contract
            </span>
          </div>
        </div>
      </div>
      <div
        class="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Eva Martinez"
          class="employee-card__edit-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="employee-card__header"
        >
          <div
            class="employee-card__avatar"
          >
            EM
          </div>
          <div
            class="employee-card__header-info"
          >
            <h3
              class="employee-card__name"
            >
              Eva Martinez
            </h3>
            <p
              class="employee-card__title"
            >
              Data Analyst
            </p>
          </div>
          <div
            class="employee-card__footer"
          >
            <span
              class="badge badge--part-time"
            >
              part-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Frank Lee"
          class="employee-card__edit-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="employee-card__header"
        >
          <div
            class="employee-card__avatar"
          >
            FL
          </div>
          <div
            class="employee-card__header-info"
          >
            <h3
              class="employee-card__name"
            >
              Frank Lee
            </h3>
            <p
              class="employee-card__title"
            >
              DevOps Engineer
            </p>
          </div>
          <div
            class="employee-card__footer"
          >
            <span
              class="badge badge--full-time"
            >
              full-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Grace Patel"
          class="employee-card__edit-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="employee-card__header"
        >
          <div
            class="employee-card__avatar"
          >
            GP
          </div>
          <div
            class="employee-card__header-info"
          >
            <h3
              class="employee-card__name"
            >
              Grace Patel
            </h3>
            <p
              class="employee-card__title"
            >
              HR Manager
            </p>
          </div>
          <div
            class="employee-card__footer"
          >
            <span
              class="badge badge--full-time"
            >
              full-time
            </span>
          </div>
        </div>
      </div>
      <div
        class="employee-card"
        style="cursor: pointer;"
      >
        <button
          aria-label="Edit Henry Dubois"
          class="employee-card__edit-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
            />
            <path
              d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
            />
          </svg>
        </button>
        <div
          class="employee-card__header"
        >
          <div
            class="employee-card__avatar"
          >
            HD
          </div>
          <div
            class="employee-card__header-info"
          >
            <h3
              class="employee-card__name"
            >
              Henry Dubois
            </h3>
            <p
              class="employee-card__title"
            >
              Frontend Developer
            </p>
          </div>
          <div
            class="employee-card__footer"
          >
            <span
              class="badge badge--contract"
            >
              contract
            </span>
          </div>
        </div>
      </div>
      <div
        class="dashboard__sentinel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dashboard > snapshot > matches loading snapshot 1`] = `
<DocumentFragment>
  <div
    class="dashboard"
  >
    <header
      class="dashboard__header"
    >
      <div>
        <h1
          class="dashboard__title"
        >
          Salary Manager
        </h1>
        <p
          class="dashboard__subtitle"
        >
          Employee Overview
        </p>
      </div>
      <button
        class="btn btn--primary"
      >
        + Add Employee
      </button>
    </header>
    <div
      class="dashboard__stats"
    >
      <div
        class="stat-card"
      >
        <span
          class="stat-card__value"
        >
          —
        </span>
        <span
          class="stat-card__label"
        >
          Total Employees
        </span>
      </div>
    </div>
    <div
      class="dashboard__section-header"
    >
      <p
        class="dashboard__section-title"
      >
        Employees
      </p>
    </div>
    <p
      class="dashboard__loading"
    >
      Loading employees…
    </p>
  </div>
</DocumentFragment>
`;
